[script] fix up types, resolve size_t/index issues

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -549,7 +549,7 @@
             <${ActorWatcher} slot_i=3 />
             <section class="toolset_memutils_controller">
                 <div class="hexdump">
-                    HexDump<span title="crashes on console (when the req info is written to slot? only from script?)">⚠️</span>
+                    HexDump
                     <${HexDumpSlot} slot_i=0 />
                     <${HexDumpSlot} slot_i=1 />
                     <${HexDumpSlot} slot_i=2 />
